----------------------------------------------------------------------
Wed Oct  9 00:05:22 2002                        Michael Jennings (mej)

The beginnings of a dedicated config file section for Escreen stuff.
----------------------------------------------------------------------
Wed Oct  9 00:32:34 2002                        Michael Jennings (mej)

Tidying up a bit.
----------------------------------------------------------------------
Sun Oct 13 00:57:37 2002                        Michael Jennings (mej)

Moved "Escreen" menu to the new Escreen theme so it's no longer
hard-coded.

Added interactive prompting to search() script routine.

Changed dialog() routine to exec_dialog() and added editing of its
command line.

Added msgbox() script routine to display a message and wait for a
keypress.

Fixed a memory leak in the menu_dialog() function.  Also cleaned up
its event handling.

Added comments to the script routines that were missing them.

Make sure we exit cleanly if our window is destroyed.

Fixed the missing menus in the Escreen theme.  You'll still get an
error message when it loads, but I'm not that worried about it.
----------------------------------------------------------------------
Sun Oct 13 01:27:51 2002                        Michael Jennings (mej)

Make sure it builds without Imlib2 so we don't have a repeat of last
time.
----------------------------------------------------------------------
Sun Oct 20 21:07:43 2002                        Michael Jennings (mej)

Fixed a double-free in libscream.c.  Also some cleanups to the spec
file, and I fixed some missing return statements in non-void
functions.
----------------------------------------------------------------------
Tue Oct 22 23:02:28 2002                        Michael Jennings (mej)

Allow users to customize the Escreen current/active display colors.

Don't display the Escreen button if there's no Escreen menu defined.
----------------------------------------------------------------------